# python-duty-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
python_duty_bot/: main.py
python_duty_bot/bot/: commands.py  telegram_bot.py
python_duty_bot/duty/: duty.py  duty_collection.py
python_duty_bot/helpers/: bot_helper.py  config.py  data_loader.py  log.py
python_duty_bot/models/: person.py
